--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-# Dependências
+# Dependências do Node
 node_modules/
 
-# Arquivos de log
+# Variáveis de ambiente locais
+.env
+.env.local
+
+# Vercel
+.vercel/
+
+# Logs
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 .pnpm-debug.log*
-
-.env
